c4prj2_input/grade.txt
Grading at Sat 18 Nov 2023 06:45:58 PM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:26:10: error: ‘n’ undeclared (first use in this function)
   26 |   number[n] = str[i];
      |          ^
input.c:26:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
